Fixed Spacing

--- a/randomizerfinal/style.css
+++ b/randomizerfinal/style.css
@@ -37,7 +37,7 @@ display:block;
 border: auto;
 border-color: ##1a1a1a;
 border-width: 5px;
-margin-left: 435px;
+margin-left: 550px;
 border-style: double;
 border-color: #d1d1d1;
 padding: 5px;
@@ -50,7 +50,7 @@ padding: 5px;
   padding: 10px;
   background-color: ##f0f0f0;
   font-family: Papyrus;
-  margin-left: 550px;
+  margin-left: 665px;
   margin-top: 20px;
   border: 10px;
   border-style: double;
